--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "nodemon": "^3.1.10",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
