--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon dist/index.js",
+    "dev": "nodemon --exec ts-node src/index.ts"
+
   },
   "keywords": [],
   "author": "",
@@ -16,13 +19,14 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
-    "nodemon": "^3.1.10",
     "typescript": "^5.9.2",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.3.1"
+    "@types/node": "^24.3.1",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2"
   }
 }
