--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "@getbrevo/brevo": "^3.0.1",
     "@sendinblue/client": "^3.3.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
+    "nodemailer": "^7.0.6",
     "sib-api-v3-sdk": "^8.5.0",
     "typescript": "^5.9.2",
     "zod": "^4.1.8"
