--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@getbrevo/brevo": "^3.0.1",
     "@sendinblue/client": "^3.3.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
