--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.19",
     "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
