--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
@@ -28,6 +29,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^10.3.0",
     "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
