--- a/phoneApp/package.json
+++ b/phoneApp/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.7",
+    "expo-app-loading": "^2.1.1",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
@@ -39,7 +40,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "react-native-webview": "13.15.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
